sets up basic game

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+
+.flexHori {
+  display: flex;
+  justify-content: space-between;
+}
+
+.tempChoice {
+  border: 2px solid black;
+}
