--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
+
 .App {
   text-align: center;
 }
@@ -45,13 +47,27 @@
 
 .tempChoice {
   padding: 2rem;
-  border: 2px solid black;
+  /* border: 2px solid white; */
+  background: rgba(253, 233, 196, 0.6);
+  border-radius: 15%;
 }
 
 .container {
   margin: 2rem 30rem;
+  font-family: 'Permanent Marker', cursive;
 }
 
 nav {
   font-size: 1.5rem;
+}
+
+html {
+  background: url('./sergey-zhesterev-lEvxp3JQAK4-unsplash.jpg') no-repeat center center fixed;
+  background-position: center;
+  background-size: cover;
+  color: white;
+}
+
+a {
+  color: white;
 }
